[gd_scene load_steps=10 format=2]

[ext_resource path="res://2d/source/scenes/builder/menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://2d/source/scenes/builder/status_bar.tscn" type="PackedScene" id=2]
[ext_resource path="res://2d/source/scenes/builder/next_event.tscn" type="PackedScene" id=3]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_left.png" type="Texture" id=4]
[ext_resource path="res://2d/assets/images/arrows/arrow_small_right.png" type="Texture" id=5]
[ext_resource path="res://2d/source/scripts/builder/events/locked_doors.gd" type="Script" id=6]
[ext_resource path="res://2d/assets/themes/transparent_borders.tres" type="Theme" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0627451, 0.00392157, 0.211765, 0.882353 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0627451, 0.00392157, 0.211765, 0.882353 )

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource( 6 )

[node name="HeaderMenu" parent="." instance=ExtResource( 1 )]

[node name="Container" type="ScrollContainer" parent="."]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 464.0
mouse_filter = 2
theme = ExtResource( 7 )
custom_styles/bg = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="Grid" type="GridContainer" parent="Container"]
margin_right = 956.0
margin_bottom = 640.0
rect_min_size = Vector2( 200, 40 )
columns = 2

[node name="MarginLabelDontRemove" type="Label" parent="Container/Grid"]
margin_right = 222.0
margin_bottom = 22.0
rect_min_size = Vector2( 222, 0 )

[node name="MarginDescription" type="Label" parent="Container/Grid"]
margin_left = 226.0
margin_right = 956.0
margin_bottom = 22.0

[node name="EventNumber2" type="Label" parent="Container/Grid"]
margin_top = 31.0
margin_right = 222.0
margin_bottom = 53.0
focus_previous = NodePath("../../../ToTitle")
text = "Event number."
align = 2

[node name="Grid1" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 26.0
margin_right = 956.0
margin_bottom = 58.0
alignment = 2

[node name="EventSpinbox" type="SpinBox" parent="Container/Grid/Grid1"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 1.0
max_value = 801.0
page = 1.0
value = 1.0

[node name="LabelDescription4" type="Label" parent="Container/Grid/Grid1"]
margin_left = 102.0
margin_top = 5.0
margin_right = 730.0
margin_bottom = 27.0
mouse_filter = 1
text = "Changing the value here will change everything below this option."

[node name="Dungeon" type="Label" parent="Container/Grid"]
margin_top = 67.0
margin_right = 222.0
margin_bottom = 89.0
focus_previous = NodePath("../../../ToTitle")
custom_styles/normal = SubResource( 2 )
text = "Dungeon."
align = 2

[node name="Grid3" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 62.0
margin_right = 956.0
margin_bottom = 94.0

[node name="DungeonSpinbox" type="SpinBox" parent="Container/Grid/Grid3"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 1.0
page = 1.0
value = 1.0

[node name="LabelDescription2" type="Label" parent="Container/Grid/Grid3"]
margin_left = 102.0
margin_top = 5.0
margin_right = 452.0
margin_bottom = 27.0
mouse_filter = 1
text = "This event happens at this dungeon."

[node name="Level" type="Label" parent="Container/Grid"]
margin_top = 103.0
margin_right = 222.0
margin_bottom = 125.0
focus_previous = NodePath("../../../ToTitle")
custom_styles/normal = SubResource( 2 )
text = "Level."
align = 2

[node name="Grid2" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 98.0
margin_right = 956.0
margin_bottom = 130.0

[node name="LevelSpinbox" type="SpinBox" parent="Container/Grid/Grid2"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 1.0
page = 1.0
value = 1.0

[node name="LabelDescription" type="Label" parent="Container/Grid/Grid2"]
margin_left = 102.0
margin_top = 5.0
margin_right = 413.0
margin_bottom = 27.0
mouse_filter = 1
text = "This event happens at this level."

[node name="UnlockAtDungeon" type="Label" parent="Container/Grid"]
margin_top = 139.0
margin_right = 222.0
margin_bottom = 161.0
rect_min_size = Vector2( 190, 0 )
focus_previous = NodePath("../../../ToTitle")
custom_styles/normal = SubResource( 2 )
text = "Unlock at dungeon."
align = 2

[node name="Grid4" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 134.0
margin_right = 956.0
margin_bottom = 166.0

[node name="UnlockAtDungeonSpinbox" type="SpinBox" parent="Container/Grid/Grid4"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 1.0
page = 1.0
value = 1.0

[node name="LabelDescription6" type="Label" parent="Container/Grid/Grid4"]
margin_left = 102.0
margin_top = 5.0
margin_right = 416.0
margin_bottom = 27.0
mouse_filter = 1
text = "Door will unlock at this dungeon."

[node name="UnlockAtLevel" type="Label" parent="Container/Grid"]
margin_top = 175.0
margin_right = 222.0
margin_bottom = 197.0
focus_previous = NodePath("../../../ToTitle")
custom_styles/normal = SubResource( 2 )
text = "Unlock at level."
align = 2

[node name="Grid5" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 170.0
margin_right = 956.0
margin_bottom = 202.0

[node name="UnlockAtLevelSpinbox" type="SpinBox" parent="Container/Grid/Grid5"]
margin_right = 98.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
min_value = 1.0
page = 1.0
value = 1.0

[node name="LabelDescription7" type="Label" parent="Container/Grid/Grid5"]
margin_left = 102.0
margin_top = 5.0
margin_right = 377.0
margin_bottom = 27.0
mouse_filter = 1
text = "Door will unlock at this 	level."

[node name="LabelEventEnabled" type="Label" parent="Container/Grid"]
margin_top = 215.0
margin_right = 222.0
margin_bottom = 237.0
text = "Event Enabled."
align = 2

[node name="Grid6" type="HBoxContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 206.0
margin_right = 956.0
margin_bottom = 246.0

[node name="EventEnabled" type="CheckButton" parent="Container/Grid/Grid6"]
margin_right = 76.0
margin_bottom = 40.0
align = 2

[node name="LabelDescription3" type="Label" parent="Container/Grid/Grid6"]
margin_left = 80.0
margin_top = 9.0
margin_right = 469.0
margin_bottom = 31.0
mouse_filter = 1
text = "Is this child event enabled for this level?"

[node name="EmptyLabel" type="Label" parent="Container/Grid"]
margin_top = 250.0
margin_right = 222.0
margin_bottom = 272.0

[node name="imageTitle" type="Label" parent="Container/Grid"]
margin_left = 226.0
margin_top = 250.0
margin_right = 956.0
margin_bottom = 272.0
text = " The key will open a locked door at the puzzle room."

[node name="imageLable" type="Label" parent="Container/Grid"]
margin_top = 330.0
margin_right = 222.0
margin_bottom = 352.0
mouse_filter = 1
text = "Key Image."
align = 2

[node name="GridContainer" type="GridContainer" parent="Container/Grid"]
margin_left = 226.0
margin_top = 276.0
margin_right = 956.0
margin_bottom = 406.0
columns = 7

[node name="ArrowLeft" type="TextureRect" parent="Container/Grid/GridContainer"]
margin_right = 25.0
margin_bottom = 130.0
focus_mode = 2
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Padding2" type="Label" parent="Container/Grid/GridContainer"]
margin_left = 29.0
margin_top = 54.0
margin_right = 41.0
margin_bottom = 76.0
text = "  "

[node name="Sprite" type="TextureRect" parent="Container/Grid/GridContainer"]
margin_left = 45.0
margin_top = 41.0
margin_right = 93.0
margin_bottom = 89.0
rect_min_size = Vector2( 48, 48 )
focus_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true

[node name="Padding3" type="Label" parent="Container/Grid/GridContainer"]
margin_left = 97.0
margin_top = 54.0
margin_right = 109.0
margin_bottom = 76.0
text = "  "

[node name="ArrowRight" type="TextureRect" parent="Container/Grid/GridContainer"]
margin_left = 113.0
margin_right = 138.0
margin_bottom = 130.0
focus_mode = 2
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Padding4" type="Label" parent="Container/Grid/GridContainer"]
margin_left = 142.0
margin_top = 54.0
margin_right = 154.0
margin_bottom = 76.0
text = "  "

[node name="ImageItemList" type="ItemList" parent="Container/Grid/GridContainer"]
margin_left = 158.0
margin_right = 278.0
margin_bottom = 130.0
rect_min_size = Vector2( 120, 130 )
allow_reselect = true

[node name="EventNumber" type="Label" parent="Container/Grid"]
margin_top = 422.0
margin_right = 222.0
margin_bottom = 444.0
focus_previous = NodePath("../../../ToTitle")
align = 2

[node name="LabelDescription5" type="Label" parent="Container/Grid"]
margin_left = 226.0
margin_top = 410.0
margin_right = 956.0
margin_bottom = 457.0
mouse_filter = 1
text = "  The text displayed before this event happens. Leave empty to bypass
  this step."

[node name="StoryLable" type="Label" parent="Container/Grid"]
margin_top = 526.0
margin_right = 222.0
margin_bottom = 548.0
focus_previous = NodePath("../../../ToTitle")
text = "Story."
align = 2

[node name="StoryTextEdit" type="TextEdit" parent="Container/Grid"]
margin_left = 226.0
margin_top = 461.0
margin_right = 956.0
margin_bottom = 614.0
rect_min_size = Vector2( 330, 153 )
wrap_enabled = true

[node name="Empty1a" type="Label" parent="Container/Grid"]
margin_top = 618.0
margin_right = 222.0
margin_bottom = 640.0
focus_previous = NodePath("../../../ToTitle")
align = 2

[node name="Empty1b" type="Label" parent="Container/Grid"]
margin_left = 226.0
margin_top = 618.0
margin_right = 956.0
margin_bottom = 640.0
mouse_filter = 1

[node name="StatusBar" parent="." instance=ExtResource( 2 )]

[node name="NextEvent" parent="." instance=ExtResource( 3 )]

[connection signal="value_changed" from="Container/Grid/Grid1/EventSpinbox" to="." method="_on_event_number_Spinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid3/DungeonSpinbox" to="." method="_on_dungeon_Spinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid2/LevelSpinbox" to="." method="_on_level_number_Spinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid4/UnlockAtDungeonSpinbox" to="." method="_on_unlock_at_dungeon_number_Spinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid5/UnlockAtLevelSpinbox" to="." method="_on_unlock_at_level_number_Spinbox_value_changed"]
[connection signal="toggled" from="Container/Grid/Grid6/EventEnabled" to="." method="_on_EventEnabled_toggled"]
[connection signal="focus_entered" from="Container/Grid/GridContainer/ArrowLeft" to="." method="_on_ArrowLeft_focus_entered"]
[connection signal="focus_exited" from="Container/Grid/GridContainer/ArrowLeft" to="." method="_on_ArrowLeft_focus_exited"]
[connection signal="mouse_entered" from="Container/Grid/GridContainer/ArrowLeft" to="." method="_on_ArrowLeft_mouse_entered"]
[connection signal="mouse_exited" from="Container/Grid/GridContainer/ArrowLeft" to="." method="_on_ArrowLeft_mouse_exited"]
[connection signal="focus_entered" from="Container/Grid/GridContainer/ArrowRight" to="." method="_on_ArrowRight_focus_entered"]
[connection signal="focus_exited" from="Container/Grid/GridContainer/ArrowRight" to="." method="_on_ArrowRight_focus_exited"]
[connection signal="mouse_entered" from="Container/Grid/GridContainer/ArrowRight" to="." method="_on_ArrowRight_mouse_entered"]
[connection signal="mouse_exited" from="Container/Grid/GridContainer/ArrowRight" to="." method="_on_ArrowRight_mouse_exited"]
[connection signal="item_selected" from="Container/Grid/GridContainer/ImageItemList" to="." method="_on_image_ItemList_item_selected"]
[connection signal="text_changed" from="Container/Grid/StoryTextEdit" to="." method="_on_StoryTextEdit_text_changed"]
[connection signal="tree_exiting" from="StatusBar" to="." method="_on_StatusBar_tree_exiting"]
